tests/e2e/function_return_app2.error
Error: syntax error in story at line 2, column 12

2|        return app.secrets
                 ^^^

E0128: `Object` is readonly and can not be returned.
